--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dio: ^5.3.0
+  image_picker: ^1.0.1
+  multiple_images_picker: ^1.0.1
 
 dev_dependencies:
   flutter_test:
